# pycloc

./: .gitignore  .pre-commit-config.yaml  404.html  Justfile  LICENSE  README.md  THIRD_PARTY_LICENSES.md  example.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/actions/prepare/: action.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/pycloc/command/: index.html
api/pycloc/exceptions/: index.html
api/summary/: index.html
contributing/: index.html
docs/: index.md
script/: clean.py  download.py  example.py
search/: search_index.json
src/pycloc/: CLOC.py  __init__.py  _aliases.py  _serialization.py  _subprocess.py  command.py  exceptions.py
src/pycloc/utils/: CLOCException.py  __init__.py
test/: test_command.py  test_serialize.py  test_subprocess.py  test_utils.py
