[project]
name = "pycloc"
dynamic = ["version"]
description = "Python wrapper for the cloc CLI tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "from-root>=1.3.0",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "requests>=2.32.4",
    "ruff>=0.12.4",
    "rust-just>=1.42.3",
    "tqdm>=4.67.1",
    "ty>=0.0.1a15",
]

[tool.hatch.build.targets.sdist]
artifacts = [
    "cloc.ini",
    "cloc.pl",
]

[tool.hatch.version]
fallback-version = "0.0.0"
source = "uv-dynamic-versioning"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["."]
addopts = ["--import-mode=importlib"]

[tool.ruff]
line-length = 120

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { git = true },
]

[tool.uv-dynamic-versioning]
bump = true
style = "semver"
vcs = "git"

[build-system]
requires = [
    "hatchling",
    "uv-dynamic-versioning",
]
build-backend = "hatchling.build"
