[project]
name = "pycloc"
dynamic = ["version"]
description = "Python wrapper for the cloc CLI tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    { include-group = "test" },
    { include-group = "tool" },
    { include-group = "script" },
]
test = [
    "pytest>=8.4.1",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=6.2.1",
    "pytest-github-actions-annotate-failures>=0.3.0",
    "pytest-mock>=3.14.1",
]
tool = [
    "ruff>=0.12.4",
    "rust-just>=1.42.3",
    "ty>=0.0.1a15",
]
script = [
    "from-root>=1.3.0",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]

[tool.hatch.build.targets.sdist]
artifacts = [
    "cloc.ini",
    "cloc.pl",
]

[tool.hatch.version]
fallback-version = "0.0.0"
source = "uv-dynamic-versioning"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["."]
addopts = [
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--import-mode=importlib",
]

[tool.ruff]
line-length = 120

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { git = true },
]

[tool.uv-dynamic-versioning]
bump = true
style = "semver"
vcs = "git"

[build-system]
requires = [
    "hatchling",
    "uv-dynamic-versioning",
]
build-backend = "hatchling.build"
