[project]
name = "pycloc"
dynamic = ["version"]
description = "Python wrapper for the cloc CLI tool"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]

[dependency-groups]
dev = [
    { include-group = "docs" },
    { include-group = "test" },
    { include-group = "tool" },
    { include-group = "script" },
]
test = [
    "pytest>=8.4.1",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=6.2.1",
    "pytest-github-actions-annotate-failures>=0.3.0",
    "pytest-mock>=3.14.1",
]
tool = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.7",
    "ty>=0.0.1a16",
]
script = [
    "from-root>=1.3.0",
    "questionary>=2.1.0",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-autoapi[python]>=0.4.1",
    "mkdocs-autorefs>=1.4.2",
    "mkdocs-git-authors-plugin>=0.10.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-github-admonitions-plugin>=0.1.1",
    "mkdocs-material>=9.6.16",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-open-in-new-tab>=1.0.8",
    "mkdocs-redirects>=1.2.2",
]

[tool.hatch.build.targets.sdist]
artifacts = [
    "cloc.ini",
    "cloc.pl",
]

[tool.hatch.version]
fallback-version = "0.0.0"
source = "uv-dynamic-versioning"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["src"]
testpaths = ["test"]
addopts = [
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--import-mode=importlib",
]

[tool.ruff]
indent-width = 4
line-length = 120
target-version = "py310"

[tool.ruff.lint]
fixable = ["ALL"]
extend-select = ["I"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { git = true },
]
required-version = ">=0.7.0,<0.8.0"

[tool.uv-dynamic-versioning]
bump = true
style = "semver"
vcs = "git"

[build-system]
requires = [
    "hatchling",
    "uv-dynamic-versioning",
]
build-backend = "hatchling.build"
